--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -937,3 +937,5 @@ foreach(file ${extension_tests})
         -D TEST_REFERENCE=${CMAKE_SOURCE_DIR}/tests/extensions/${testname}.txt
         -P ${CMAKE_SOURCE_DIR}/runTest.cmake)
 endforeach()
+
+add_subdirectory(src/bpec)
