--- a/src/bpec/CMakeLists.txt
+++ b/src/bpec/CMakeLists.txt
@@ -6,3 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 
 add_executable(${PROJECT_NAME} ${_src})
+
+target_include_directories(${PROJECT_NAME} PRIVATE ../emu ../include)
